--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,86 +1,106 @@
 <br><br>
-<h1 class="text-center">チーム一覧</h1>
-<div class="mx-auto justify-content-center" style="width: 1200px;">
-  <div class="input-group">
-    <%= form_tag teams_path, method: :get do %>
-      <%= text_field_tag :search, params[:search], placeholder: "チーム名を入力してください", style: "width: 250px;height :35px;" %>
-      <%= submit_tag "検索", :name => nil, class: 'btn btn-success' %>
-    <% end %>
-  </div>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">チーム名</th>
-        <th scope="col">チームメンバー数</th>
-        <th scope="col">プロジェクト数</th>
-        <th scope="col">作成日</th>
-        <th scope="col">作成者</th>
-        <th class="text-center" scope="col">メンバー追加</th>
-        <th class="text-center" scope="col">詳細</th>
-        <th class="text-center" scope="col">編集</th>
-        <th class="text-center" scope="col">削除</th>
-        <%# <th colspan="4"></th> %>
-      </tr>
-    </thead>
-    <tbody>
-      <% if @teams.any? %>
-        <% if params[:page].nil? || params[:page] == "0" || params[:page] == "1" %>
-          <% i = 0 %>
-        <% else %>
-          <% page = params[:page].to_i - 1 %>
-          <% i = page * 5 %>
-        <% end %>
-        <% @teams.each_with_index do |team,index| %>
-          <tr>
-            <% if user_signed_in? %>
-              <th scope="row"><%= index + i + 1 %></th>
-              <td><%= team.name %></td>
-              <% if team.members.count == 0 %>
-                <td>このチームにメンバーはまだ追加していません。</td>
-                <% else %>
-                <td><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
-              <% end %>
-              <td><%= team.projects.count %></td>
-              <td><%= team.team_create_date %></td>
-              <td><%= team.user.name %></td>
-            
-              <% if (team.user.id == current_user.id)%>
-                <td class="text-center"><%= link_to("メンバー追加", "/teams/#{team.id}/member_add", class: "btn btn-primary btn-sm") %></td>
-                <td class="text-center"><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-info btn-sm") %></td>
-                <td class="text-center"><%= link_to("編集", "/teams/#{team.id}/edit", class: 'btn btn-primary btn-sm') %></td>
-                <td class="text-center"><%= link_to("削除", "/teams/#{team.id}", class: "btn btn-danger btn-sm", method: :delete, data: {confirm: "このチーム削除しますか？"}) %></td>
-              <% else %>
-                <td class="text-center"><button disabled="disabled" class="btn btn-primary btn-sm">メンバー追加</button></td>
-                <td class="text-center"><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-info btn-sm") %></td>
-                <td class="text-center"><button disabled="disabled" class="btn btn-primary btn-sm">編集</button></td>
-                <td class="text-center"><button disabled="disabled" class="btn btn-danger btn-sm">削除</button></td>       
-              <% end %>
-            <% else %>
-              <th scope="row"><%= index + i + 1 %></th>
-              <td><%= team.name %></td>
-              <% if team.members.count == 0 %>
-                <td>このチームにメンバーはまだ追加していません。</td>
-                <% else %>
-                <td><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
-              <% end %>
-              <td><%= team.projects.count %></td>
-              <td><%= team.team_create_date %></td>
-              <td><%= team.user.name %></td>
-              <td class="text-center"><button disabled="disabled" class="btn btn-primary btn-sm">メンバー追加</button></td>
-              <td class="text-center"><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-info btn-sm") %></td>
-              <td class="text-center"><button disabled="disabled" class="btn btn-primary btn-sm">編集</button></td>
-              <td class="text-center"><button disabled="disabled" class="btn btn-danger btn-sm">削除</button></td>
-            <% end %>
-          </tr>
-        <% end %>
-      <% else %>
-        <th class="fw-bold text-center" colspan="10">チームのデータがございません。</th>
+<div class="container">
+  <h1 class="text-center">チーム一覧</h1>
+  <div class="mx-auto justify-content-center">
+    <div class="input-group">
+      <%= form_tag teams_path, method: :get do %>
+        <%= text_field_tag :search, params[:search], placeholder: "チーム名を入力してください", id: "search" %>
+        <%= submit_tag "検索", :name => nil, class: 'btn btn-success' %>
       <% end %>
-    </tbody>
-  </table>
-  <div class="digg_pagination">
-    <%= will_paginate @teams %> 
-  </div><br>
-  <%= link_to "戻る", :back, class: "btn btn-primary" %>
+    </div>
+    <table class="table" id="index-tables">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>チーム名</th>
+          <th>メンバー数</th>
+          <th>プロジェクト数</th>
+          <th>作成日</th>
+          <th>作成者</th>
+          <th>メンバー追加</th>
+          <th>詳細</th>
+          <th>編集</th>
+          <th>削除</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% if @teams.any? %>
+          <% if params[:page].nil? || params[:page] == "0" || params[:page] == "1" %>
+            <% i = 0 %>
+          <% else %>
+            <% page = params[:page].to_i - 1 %>
+            <% i = page * 5 %>
+          <% end %>
+          <% @teams.each_with_index do |team,index| %>
+            <tr>
+              <% if user_signed_in? %>
+                <td data-title="#"><%= index + i + 1 %></td>
+                <td  data-title="チーム名"><%= team.name %></td>
+                <% if team.members.count == 0 %>
+                  <td data-title="チームメンバー数">このチームにメンバーはまだ追加していません。</td>
+                  <% else %>
+                  <td data-title="メンバー数"><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
+                <% end %>
+                <td data-title="プロジェクト数"><%= team.projects.count %></td>
+                <td data-title="作成日"><%= team.team_create_date %></td>
+                <td data-title="作成者"><%= team.user.name %></td>
+              
+                <% if (team.user.id == current_user.id)%>
+                  <td data-title="メンバー追加"><%= link_to "/teams/#{team.id}/member_add", method: :get do %>
+                    <i class="fa fa-user-plus fa-2x" style="color:#145A32"></i>
+                  <% end %>
+                  </td>
+                  <td data-title="詳細"><%= link_to "/teams/#{team.id}", method: :get do %>
+                    <i class="fa fa-info-circle fa-2x"></i>
+                  <% end %>
+                  </td>
+                  <td data-title="編集"><%= link_to "/teams/#{team.id}/edit", method: :get do %>
+                    <i class="fa fa-edit fa-2x"></i>
+                  <% end %>
+                  </td>
+                  <td data-title="削除"><%= link_to "/teams/#{team.id}", class: "btn-fa-red", method: :delete, data: {confirm: "このチーム削除します。よろしいですか？"} do %>
+                    <i class="fa fa-trash fa-2x " style="color:red"></i>
+                  <% end %>
+                  </td>
+                <% else %>
+                  <td data-title="メンバー追加"><i class="fa fa-user-plus fa-2x" style="color:#A9DFBF"></td>
+                  <td data-title="詳細"><%= link_to "/teams/#{team.id}", method: :get do %>
+                    <i class="fa fa-info-circle fa-2x"></i>
+                  <% end %>
+                  </td>
+                  <td data-title="編集"><i class="fa fa-edit fa-2x " style="color:#85C1E9"></i></td>
+                  <td data-title="削除"><i class="fa fa-trash fa-2x " style="color:#F1948A"></i></td>       
+                <% end %>
+              <% else %>
+                <td data-title="#"><%= index + i + 1 %></td>
+                <td data-title="チーム名"><%= team.name %></td>
+                <% if team.members.count == 0 %>
+                  <td data-title="メンバー数">このチームにメンバーはまだ追加していません。</td>
+                  <% else %>
+                  <td data-title="メンバー数"><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
+                <% end %>
+                <td data-title="プロジェクト数"><%= team.projects.count %></td>
+                <td data-title="作成日"><%= team.team_create_date %></td>
+                <td data-title="作成者"><%= team.user.name %></td>
+                <td data-title="メンバー追加"><i class="fa fa-user-plus fa-2x" style="color:#A9DFBF"></td>
+                <td data-title="詳細"><%= link_to "/teams/#{team.id}", method: :get do %>
+                  <i class="fa fa-info-circle fa-2x"></i>
+                <% end %>
+                </td>
+                <td data-title="編集"><i class="fa fa-edit fa-2x " style="color:#85C1E9"></i></td>
+                <td data-title="削除"><i class="fa fa-trash fa-2x " style="color:#F1948A"></i></td>
+              <% end %>
+            </tr>
+          <% end %>
+        <% else %>
+          <th class="fw-bold text-center" colspan="10">チームのデータがございません。</th>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="digg_pagination">
+      <%= will_paginate @teams %> 
+    </div><br>
+    <%= link_to "戻る", :back, class: "btn btn-primary" %>
+  </div>
 </div>
+
