--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,6 +1,8 @@
 <br><br>
-<div class="mx-auto justify-content-center team_bg" style="width: 300px;">
-<h1 class="text-center">チーム作成</h1>
+<div>
+  <h2 class="text-center">チーム作成</h2>
+</div>
+<div class="d-flex justify-content-center">
 <%= form_with(model: @team, local: true) do |f| %>
   <% if @team.errors.any? %>
     <% @team.errors.full_messages.each do |message| %>
@@ -9,10 +11,9 @@
   <% end %>
   <div class="mb-3">
     <%= f.label :name, "チーム名", class: "form-label" %><br />
-    <%= f.text_field :name, class: "form-control", style: "width:250px" %>
+    <%= f.text_field :name, class: "form-control"%>
   </div>
   <%= f.submit "作成", class: "btn btn-primary" %>
   <%= link_to "戻る", :back, class: "btn btn-primary" %>
 <% end %>
-
 </div>
